--- a/Clientes.html
+++ b/Clientes.html
@@ -4,12 +4,11 @@
  	<script>
 		alert("Welcome to HARDSPORT90");
 	</script>
-	  	<title>Mi pirmera pagina web</title>
-	  	<meta charset="utf-8">
+	  		<meta charset="utf-8">
 			<link rel="Stylesheet" href="Stylesheet.css">
-			<script src="http://code.jquery.com-1.7.1.min.js"></script>
-			<script src='scriptPrincipal2.js'></script>
 	</head>
+			<title>Mi primera página Web</title>
+			<style type="text/css"></style>
 		<body>
 		 	<marquee bgcolor="white" behavior="alternate" scrollamount="1">Elvis Stiven Diaz Gonzalez ** 0900-17-13137</marquee>
 			<div id="contenido">
