--- a/Clientes.html
+++ b/Clientes.html
@@ -1,51 +1,51 @@
 <!DOCTYPE html>
 <html lang="es">
- 	<head>
- 	<script>
+ 		<head>
+ 		<script>
 		alert("Welcome to HARDSPORT90");
-	</script>
+		</script>
 	  		<meta charset="utf-8">
 			<link rel="Stylesheet" href="Stylesheet.css">
-	</head>
+		</head>
 			<title>Mi primera página Web</title>
-			<style type="text/css"></style>
+				<style type="text/css">
+				</style>
 		<body>
-		 	<marquee bgcolor="white" behavior="alternate" scrollamount="1">Elvis Stiven Diaz Gonzalez ** 0900-17-13137</marquee>
+			<marquee bgcolor="white" behavior="alternate" scrollamount="1">Elvis Stiven Díaz Gonzalez ** 0900-17-13137</marquee>
 			<div id="contenido">
 				<header>
 					<hgroup>
-						<center><h>HARDSPORT90</h></center>				
+						<h>HARDSPORT90</h>				
 					</hgroup>
 				<nav>
 					<ul>
 						<li><a href="index.html">INICIO</a></li>
 						<li><a href="somos.html">QUIENES SOMOS</a></li>
-						<li><a href="productos.html">PRODCUTOS</a></li>
+						<li><a href="productos.html">PRODUCTOS</a></li>
 						<li><a href="proveedores.html">PROVEEDORES</a></li>
-						<li><a href ="clientes.html">CLIENTES FRECUENTES</a></li>
+						<li><a href="clientes.html">CLIENTES FRECUENTES</a></li>
 						<li><a href="contactenos.html">CONTACTENOS</a></li>
-						</ul>
+					</ul>
 					</nav>
 				</header>
 				<section>
 					<div id="Texto">
-						<hgropu>
-							<center><h>Estos Son nuestros clientes</h></center>
-						</hgropu>
-							 <br>
-                           <h2>Mujeres  <progress value="85" max="100">85 %</progress></h2>
-                           <br>
-                           <h2>Hombres  <progress value="67" max="100">67 %</progress></h2>
-                           <br>
-                           <h2>empresas  <progress value="45" max="100">45 %</progress></h2>
-                           <br>
-                           <h2>Adolescentes  <progress value="25" max="100">25 %</progress></h2>
-
+						<article>
+							<hgroup>
+								<center><h>Productos</h></center>
+							</hgroup>
+							<center>
+							<p3>Tenemos los Mejores productos en zapatos deportivos Como:</p3>
+							<p><a href= "Nike.html">NIKE</a></p>
+							<p><a href= "Kappa.html">KAPPA</a>
+							<p><a href= "Reebok.html">REEBOK</a></p>
+							</center>
+							</article>
 					</div>
 				</section>
 			</div>
-			<center><footer>
-			                      "Conocereis la verdad y la verdad os hara libres"
-			</center></footer>
+			<center> <footer>
+					"Conoceréis la verdad y la verdad os hará libres"
+			</center> </footer>
 		</body>
 </html>
