--- a/index.html
+++ b/index.html
@@ -3,42 +3,78 @@
  		<head>
 	  		<meta charset="utf-8">
 			<link rel="Stylesheet" href="Stylesheet.css">
-			<script src="http://code.jquery.com-1.7.1.min.js"></script>
-			<script src='scriptPrincipal2.js'></script>
+						<marquee bgcolor="white" behavior="alternate" scrollamount="1">Elvis Stiven Diaz Gonzalez ** 0900-17-13137</marquee>
 		</head>
-		<script>
-		alert("Welcome to HARDSPORT90");
-	</script>
-		   <title>Mi primera pagina Web</title>
-		<body>
-			<marquee bgcolor="white" behavior="alternate" scrollamount="1">Elvis Stiven Diaz Gonzalez ** 0900-17-13137</marquee>
-				<div id="contenido">
+		   <title>PROYECTO -- BITSANDBITES SUPERMARKET</title>
+		<body
+				<ul class="nav">
 				<header>
 					<hgroup>
-						<center><h>HARDSPORT90</h></center>
+						<center><h><img src="LOGO.jpg" title="BITANDBITES" width="800" height="400"/> </h></center>
 					</hgroup>
-				<nav>
+	<div>
+			<ul class="nav">
+				<li><a href="index.html">INICIO</a>
+			<ul>
+					</ul>
+				<li><a href="SOMOS.HTML">QUIENES SOMOS</a>
 					<ul>
-						<li><a href="index.html">INICIO</a></li>
-						<li><a href="somos.html">QUIENES SOMOS</a></li>
-						<li><a href="productos.html">PRODUCTOS</a></li>
-						<li><a href="proveedores.html">PROVEEDORES</a></li>
-						<li><a href="clientes.html">CLIENTES FRECUENTES</a></li>
-						<li><a href="contactenos.html">CONTACTENOS</a></li>
-						</ul>
-				</nav>
+						<li><a href="MISION.HTML">MISION</a></li>
+						<li><a href="VISION.HTML">VISION</a></li>
+					</ul>
+				</li>
+						<li><a href="PRODUCTOS.HTML">PRODUCTOS</a>
+					<ul>
+						<li><a href="FRUTAS Y VERDURAS.HTML">FRUTAS Y VERDURAS</a></li>
+						<li><a href="ELECTRODOMESTICOS.HTML">ELECTRODOMESTICOS</a></li>
+						<li><a href="TECNOLOGIA.HTML">TECNOLOGIA</a></li>
+						<li><a href="DEPORTIVOS.HTML">IMPLEMENTOS DEPORTIVOS</a></li>
+						<li><a href="LIMPIEZA.HTML">PRODUCTOS DE LIMPIEZA</a></li>
+					</ul>
+				</li>
+			<li><a href="CLIENTES.HTML">CLIENTES</a>
+					<ul>
+						<li><a href="FRECUENTES.HTML">NUESTROS CLIENTES FRECUENTES</a></li>
+						<li><a href="SOMETIMES.HTML">CLIENTES NUEVOS</a></li>
+					</ul>
+				</li>
+				<li><a href="CONTACTENOS.HTML">CONTACTENOS</a>
+					<ul>
+						<li><a href="MAPA.HTML">MAPA DE UBICACION</a></li>
+					</ul>
+				</li>
+					</ul>
+			</ul>
+	</div>
 			</header>
 				<div id="Texto" >
-							<center><h>Bienvenido a Nuestra Página</h></center>
-						<p>Nuestros productos deportivos los puedes encontrar aqui, puedes cotizar, puedes comprarlos directamente aqui solo con un clik, tenemos variedad de estilos, marcas y tallas, para toda clase de personas, tanto como para ejercicios sin tanta dificultad hasta zapatos para alguien que se ejercita siempre, contamos con garantias hasta 2 años, y rebajas o descuentos hasta el 40%, si te suscribiste a nuestra página puedes preguntar por nuestros descuentos o liquidaciones, nosotros nos encargamos de tu pedido.</p>
-
-						<ceneter><p>Si quieres cambiar tus zapatos antiguos y los has comprado en HARDSPORT90 solo envianos un E-mail y contactanos en nuestra página Web o Redes Sociales, Solo tienes que mandar el código de tu Factura y te haremos un increible descuento por tu Nuevo par de Zapatos Deportivos o llamanos a los Teléfonos 1-800-HARDSPORT90 o al 1-881-HARDSPORT90.</p></ceneter>
-
-						<center><P>Esta Oferta es por tiempo limitado y aplica para cualquier marca de Zapatos que nosotros Manejemos.</P></center>
+							<Center><h1>Bienvenido a Nuestra Página</h1></Center
 				</div>
+						<p1>BITES AND BITES, te ofrece una gran variedad de productos para que ya no estes haciendo grandes filas como siempre para querer comprar te ofrecemos servicio a domicilio, pudes ingresar a nuestra APP BANDBs completamente gratis.</p1>
+
+						<p1>Recuerda que obtienes mas por menos, algo que nadie hara por ti, si estas pensando en remodelar tu cocina con nuevos electrodomesticos, BITANDBITES, te ofrece precios increibles.</p1>
+
+						<P1>Date la grande, adquiriendo nuestra nueva tarjeta de puntos BANDBs, con esta tarjeta puedes acumular la mayor cantidad de puntos posibles, canjearlos cuando quieres y lo mejor de todo, por lo que tu quieras.</P1>
 		</div>
+			<center><img src="SP1.jpg" title="GRACIAS POR PREFERIRNOS" width="600" height="300"/>     
+			<img src="SP2.jpg" title="BITSANDBITES" width="600" height="300"/>       
+			<img src="SP3.jpg" title="CLIENTES" width="600" height="300"/>
+			<img src="SP4.jpg" title="SUPERMARKET" width="600" height="300"/></center>
 		<center><footer>
 			"Conoceréis la verdad y la verdad os hará libres"
+			<br>  	
+			<a>Siguenos en Facebook como BITSANDBITES</a>		
+			<br>
+			<a>Siguenos en Twitter como @BITSANDBITES</a>	   			
+			<br>
+			<a>Siguenos en Instagram como BITS_BITES</a>	     			
+			<br>
+
+			<a href="https://www.facebook.com/DiiazElviziithwO"><img src="FB.JPG" title="BITSANDBITES" width="100" height="100"/></a>
+			<a href="https://twitter.com/Elvis_Soy_"><img src="TW.JPG" title="@BITSANDBITES" width="100" height="100"/></a>
+			<a href="https://www.instagram.com/stiven__diiaz/?hl=es-la"><img src="INS.JPG" title="BITS_BITES" width="100" height="100"/></a>
+			<a href="https://apps.umg.edu.gt/"><img src="UMG.JPG" title="BITSANDBITESUMG" width="100" height="100"/></a>
 		</center></footer>
+		<audio src="PROYECTO.mp3" loop"3" autoplay="true">
 	</body>
 </html>
