--- a/ANUNCIO.HTML
+++ b/ANUNCIO.HTML
@@ -7,8 +7,8 @@
 		</head>
 		   <title>PROYECTO -- BITS&BITES SUPERMARKET</title>
 		<body>
-		<center><video width="900" height="900" controls="controls" posters="LOGO/LOGO.JPG">
-				<source src="LOGO/BIT&BITES.MP4" type="video/mp4"></center> 
+		<center><video width="900" height="900" controls="controls" posters="LOGO.JPG">
+				<source src="BITSANDBITES.mp4" type="video/mp4"></center> 
 				</video>
 		<center><footer>
 							<li><a href="in.html">IR A MENU PRINCIPAL</a>
