--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 			<div class="row center-xs">
                   				<div class="col-xs-0 col-sm6-0 col-md-0 product animated fadeInDown delay-1">
                     				<div class="card">
-                      					<img src="erick.jpg" alt="Imagen de Erick"> 
+                      					<img src="Erick.jpg" alt="Imagen de Erick"> 
                       					                                  
                     				</div>
                     			</div>
